--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 }
 .big-img{
     background-image: url(<url>);
-    width: 800px;
-    height: 500px;
+    width: 600%;
+    height: 600%;
     background-position: 50% 50%;
     background-size: cover;
 }
